[go/tweets] Add Reply and DeleteReply API skeleton.
