# go/tweets/gen/http/tweets/server/types.go
@@ -54,6 +54,20 @@ type DeleteRetweetRequestBody struct {
 	UserID  *string `form:"user_id,omitempty" json:"user_id,omitempty" xml:"user_id,omitempty"`
 }
 
+// ReplyRequestBody is the type of the "tweets" service "Reply" endpoint HTTP
+// request body.
+type ReplyRequestBody struct {
+	TweetID *string `form:"tweet_id,omitempty" json:"tweet_id,omitempty" xml:"tweet_id,omitempty"`
+	UserID  *string `form:"user_id,omitempty" json:"user_id,omitempty" xml:"user_id,omitempty"`
+}
+
+// DeleteReplyRequestBody is the type of the "tweets" service "DeleteReply"
+// endpoint HTTP request body.
+type DeleteReplyRequestBody struct {
+	TweetID *string `form:"tweet_id,omitempty" json:"tweet_id,omitempty" xml:"tweet_id,omitempty"`
+	UserID  *string `form:"user_id,omitempty" json:"user_id,omitempty" xml:"user_id,omitempty"`
+}
+
 // CreateTweetResponseBody is the type of the "tweets" service "CreateTweet"
 // endpoint HTTP response body.
 type CreateTweetResponseBody struct {
@@ -207,6 +221,42 @@ type DeleteRetweetBadRequestResponseBody struct {
 	Fault bool `form:"fault" json:"fault" xml:"fault"`
 }
 
+// ReplyBadRequestResponseBody is the type of the "tweets" service "Reply"
+// endpoint HTTP response body for the "BadRequest" error.
+type ReplyBadRequestResponseBody struct {
+	// Name is the name of this class of errors.
+	Name string `form:"name" json:"name" xml:"name"`
+	// ID is a unique identifier for this particular occurrence of the problem.
+	ID string `form:"id" json:"id" xml:"id"`
+	// Message is a human-readable explanation specific to this occurrence of the
+	// problem.
+	Message string `form:"message" json:"message" xml:"message"`
+	// Is the error temporary?
+	Temporary bool `form:"temporary" json:"temporary" xml:"temporary"`
+	// Is the error a timeout?
+	Timeout bool `form:"timeout" json:"timeout" xml:"timeout"`
+	// Is the error a server-side fault?
+	Fault bool `form:"fault" json:"fault" xml:"fault"`
+}
+
+// DeleteReplyBadRequestResponseBody is the type of the "tweets" service
+// "DeleteReply" endpoint HTTP response body for the "BadRequest" error.
+type DeleteReplyBadRequestResponseBody struct {
+	// Name is the name of this class of errors.
+	Name string `form:"name" json:"name" xml:"name"`
+	// ID is a unique identifier for this particular occurrence of the problem.
+	ID string `form:"id" json:"id" xml:"id"`
+	// Message is a human-readable explanation specific to this occurrence of the
+	// problem.
+	Message string `form:"message" json:"message" xml:"message"`
+	// Is the error temporary?
+	Temporary bool `form:"temporary" json:"temporary" xml:"temporary"`
+	// Is the error a timeout?
+	Timeout bool `form:"timeout" json:"timeout" xml:"timeout"`
+	// Is the error a server-side fault?
+	Fault bool `form:"fault" json:"fault" xml:"fault"`
+}
+
 // NewCreateTweetResponseBody builds the HTTP response body from the result of
 // the "CreateTweet" endpoint of the "tweets" service.
 func NewCreateTweetResponseBody(res *tweets.Tweet) *CreateTweetResponseBody {
@@ -331,6 +381,34 @@ func NewDeleteRetweetBadRequestResponseBody(res *goa.ServiceError) *DeleteRetwee
 	return body
 }
 
+// NewReplyBadRequestResponseBody builds the HTTP response body from the result
+// of the "Reply" endpoint of the "tweets" service.
+func NewReplyBadRequestResponseBody(res *goa.ServiceError) *ReplyBadRequestResponseBody {
+	body := &ReplyBadRequestResponseBody{
+		Name:      res.Name,
+		ID:        res.ID,
+		Message:   res.Message,
+		Temporary: res.Temporary,
+		Timeout:   res.Timeout,
+		Fault:     res.Fault,
+	}
+	return body
+}
+
+// NewDeleteReplyBadRequestResponseBody builds the HTTP response body from the
+// result of the "DeleteReply" endpoint of the "tweets" service.
+func NewDeleteReplyBadRequestResponseBody(res *goa.ServiceError) *DeleteReplyBadRequestResponseBody {
+	body := &DeleteReplyBadRequestResponseBody{
+		Name:      res.Name,
+		ID:        res.ID,
+		Message:   res.Message,
+		Temporary: res.Temporary,
+		Timeout:   res.Timeout,
+		Fault:     res.Fault,
+	}
+	return body
+}
+
 // NewCreateTweetPayload builds a tweets service CreateTweet endpoint payload.
 func NewCreateTweetPayload(body *CreateTweetRequestBody) *tweets.CreateTweetPayload {
 	v := &tweets.CreateTweetPayload{
@@ -385,6 +463,26 @@ func NewRetweetPayload(body *RetweetRequestBody) *tweets.RetweetPayload {
 // payload.
 func NewDeleteRetweetPayload(body *DeleteRetweetRequestBody) *tweets.DeleteRetweetPayload {
 	v := &tweets.DeleteRetweetPayload{
+		TweetID: *body.TweetID,
+		UserID:  *body.UserID,
+	}
+
+	return v
+}
+
+// NewReplyPayload builds a tweets service Reply endpoint payload.
+func NewReplyPayload(body *ReplyRequestBody) *tweets.ReplyPayload {
+	v := &tweets.ReplyPayload{
+		TweetID: *body.TweetID,
+		UserID:  *body.UserID,
+	}
+
+	return v
+}
+
+// NewDeleteReplyPayload builds a tweets service DeleteReply endpoint payload.
+func NewDeleteReplyPayload(body *DeleteReplyRequestBody) *tweets.DeleteReplyPayload {
+	v := &tweets.DeleteReplyPayload{
 		TweetID: *body.TweetID,
 		UserID:  *body.UserID,
 	}
@@ -451,6 +549,29 @@ func ValidateRetweetRequestBody(body *RetweetRequestBody) (err error) {
 // ValidateDeleteRetweetRequestBody runs the validations defined on
 // DeleteRetweetRequestBody
 func ValidateDeleteRetweetRequestBody(body *DeleteRetweetRequestBody) (err error) {
+	if body.TweetID == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("tweet_id", "body"))
+	}
+	if body.UserID == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("user_id", "body"))
+	}
+	return
+}
+
+// ValidateReplyRequestBody runs the validations defined on ReplyRequestBody
+func ValidateReplyRequestBody(body *ReplyRequestBody) (err error) {
+	if body.TweetID == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("tweet_id", "body"))
+	}
+	if body.UserID == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("user_id", "body"))
+	}
+	return
+}
+
+// ValidateDeleteReplyRequestBody runs the validations defined on
+// DeleteReplyRequestBody
+func ValidateDeleteReplyRequestBody(body *DeleteReplyRequestBody) (err error) {
 	if body.TweetID == nil {
 		err = goa.MergeErrors(err, goa.MissingFieldError("tweet_id", "body"))
 	}
